# rcwa-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  epsilon-fourier.cpp  main-1d.cpp  main-benchmark.cpp  test-interp.cpp
include/: CubicSplineInterpolation.h  LinearInterpolation.h  ParseMatrix.h  rcwa-1d.h  si_green.h  write-utils.h
py/: plot-field.py  plot-lines.py  plot-matrix.py
src/: CMakeLists.txt  rcwa-1d.cpp
